welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:3: error: not a legal formal parameter
		case _ if ((a%10 == b%10) => true
                                 ^lastDigit:4: error: ')' expected but 'case' found.
		case _ => false 
                ^