welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
	(a,b) match {
		case _ if ((a%10 == b%10) => true
		case _ => false 
	}
}
